--- a/flussonic_stat/Pipfile
+++ b/flussonic_stat/Pipfile
@@ -9,6 +9,7 @@ requests = "*"
 djangorestframework = "*"
 django-cors-headers = "*"
 mysqlclient = "*"
+django-rest-multiple-models = "*"
 
 [dev-packages]
 
