--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,11 +20,8 @@ services:
     volumes:
       - ./flussonic_stat:/app
       - ./flussonic_stat/static:/app/static
-    environment:
-      - DB_NAME=flussonic_stat
-      - MYSQL_USER=flussonic-user
-      - MYSQL_PASSWORD=test
-      - SECRET_KEY=django-insecure-s(3l57qop!^xrvmkq59xqxdr=4l(&24z)p9oaa32ptfd*x(6s8
+    env_file:
+      - ./flussonic_stat/.env
     restart: unless-stopped
     depends_on:
       - db
@@ -34,11 +31,7 @@ services:
   db:
     container_name: db03
     image: mysql:8.0
-    environment:
-      MYSQL_DATABASE: 'flussonic_stat'
-      MYSQL_USER: 'flussonic-user'
-      MYSQL_PASSWORD: 'test'
-      MYSQL_ROOT_PASSWORD: 'superpassword'
+    env_file: .env
     restart: always
     volumes:
     - ./db_django:/var/lib/mysql
