--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,8 @@ services:
     container_name: db03
     image: mysql:8.0
     env_file: .env
+    environment:
+      - MYSQL_ROOT_PASSWORD=password
     restart: always
     volumes:
     - ./db_django:/var/lib/mysql
