--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,9 +31,7 @@ services:
   db:
     container_name: db03
     image: mysql:8.0
-    env_file: .env
-    environment:
-      - MYSQL_ROOT_PASSWORD=password
+    env_file: ./.env
     restart: always
     volumes:
     - ./db_django:/var/lib/mysql
