--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
   db:
     container_name: db03
     image: mysql:8.0
-    env_file: ./.env
+    env_file: .env
     restart: always
     volumes:
     - ./db_django:/var/lib/mysql
