--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     depends_on:
       - db
     command: >
-      sh -c "python manage.py runserver 0.0.0.0:8000"
+      sh -c "python3.8 manage.py runserver 0.0.0.0:8000"
 
   db:
     container_name: db03
