--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,7 @@ services:
     image: mysql:8.0
     env_file: .env
     environment:
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_ROOT_PASSWORD: Z3>eKF;Sg^2%%"vS
     restart: always
     volumes:
     - ./db_django:/var/lib/mysql
