--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,12 +30,12 @@ services:
 
   db:
     container_name: db03
-    image: mysql:8.0
+    image: mysql:5.7
     environment:
       MYSQL_DATABASE: flussonic,
       MYSQL_USER: flussonic,
       MYSQL_PASSWORD: test,
-      MYSQL_ROOT_PASSWORD: Z3>eKF;Sg^2%%"vS
+      MYSQL_ROOT_PASSWORD: supper
     restart: always
     volumes:
     - ./db_django:/var/lib/mysql
