--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,10 +32,10 @@ services:
     container_name: db03
     image: mysql:latest
     environment:
-      MYSQL_DATABASE: flussonic,
-      MYSQL_USER: flussonic,
-      MYSQL_PASSWORD: testtest,
-      MYSQL_ROOT_PASSWORD: supperpuper
+      MYSQL_DATABASE: 'flussonic'
+      MYSQL_USER: 'flussonic'
+      MYSQL_PASSWORD: 'testtest'
+      MYSQL_ROOT_PASSWORD: 'supperpuper'
     restart: always
     volumes:
     - ./db_django:/var/lib/mysql
