--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,11 +31,8 @@ services:
   db:
     container_name: db03
     image: mysql:latest
-    environment:
-      MYSQL_DATABASE: 'flussonic'
-      MYSQL_USER: 'flussonic'
-      MYSQL_PASSWORD: 'testtest'
-      MYSQL_ROOT_PASSWORD: 'supperpuper'
+    env_file:
+      - .env
     restart: always
     volumes:
     - ./db_django:/var/lib/mysql
