--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,8 @@ services:
   db:
     container_name: db03
     image: mysql:latest
+    command:
+      - '--skip-log-bin'
     env_file:
       - .env
     restart: always
