--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - ./flussonic_stat/static:/app/static
     depends_on:
       - app
+    networks:
+      - mysqlnetwork
 
   app:
     build:
