--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
     depends_on:
       - db
     command: >
-      sh -c "python3.8 manage.py runserver 0.0.0.0:8000"
+      sh -c "python manage.py wait_for_db && python manage.py runserver 0.0.0.0:8000"
 
   db:
     container_name: db03
@@ -39,8 +39,9 @@ services:
     env_file:
       - .env
     restart: always
+    tmpfs:
+      - /var/lib/mysql
     volumes:
-      - ./db_django:/var/lib/mysql
       - ./db_backup:/backup
 
   mysql-admin:
