--- a/flussonic_stat/Pipfile
+++ b/flussonic_stat/Pipfile
@@ -11,6 +11,7 @@ djangorestframework = "*"
 django-cors-headers = "*"
 mysqlclient = "*"
 django-rest-multiple-models = "*"
+pymemcache = "*"
 
 [dev-packages]
 
