--- a/flussonic_stat/Pipfile
+++ b/flussonic_stat/Pipfile
@@ -4,7 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "==3.2"
+django = "<4.0,>=3.2"
 requests = "*"
 python-dotenv = "*"
 djangorestframework = "*"
